# manmc

./: Cargo.toml
src/: cli.rs  lib.rs  modules.rs
src/modules/config/: service.rs
src/modules/paper/: repository.rs  service.rs
src/modules/process/: service.rs
